backport: re PR target/37640 (__sync_lock_test_and_set on PPC64 causes ICE)

Backport from mainline:

	PR target/37640
	2008-09-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	* config/rs6000/rs6000.c (rs6000_expand_compare_and_swapqhi): Force
	address to a register before taking the lower part.

testsuite/
	* gcc.c-torture/compile/sync-3.c: New testcase to check that
	addresses of non zero offset works.

From-SVN: r141980